--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
               <ul>
                 <li>
                   <i class="icofont-rounded-right"></i>
-                  <strong>Email:</strong> m.basim.ismail@gmail.com
+                  <strong>Email:</strong> karamtaha15@gmail.com
                 </li>
               </ul>
             </div>
